# KEX-project

./: .gitignore  O3_Hannes_Gustafsson_rapport.pdf:Zone.Identifier  README.md  logistic_map_study.ipynb  pyproject.toml  test.ipynb
experiments/: 00 - Explore SORN Package.ipynb  01 - Explore PySINDy.ipynb  02 - Simulator NEST.ipynb
experiments/NEST/: Tutorial - 02 - Populations of neurons.ipynb  Tutorial - 03 - Connecting networks with synapses.ipynb
experiments/NEST/Examples/: 1. A sparsely connected recurrent network.ipynb  2. Plastic Networks.ipynb  3. Hill-Tononi model of sleep.ipynb
experiments/NEST/Tutorials/: Tutorial - 01 - Neurons and sipmple NN.ipynb  (+3 more)
img/: avalanche_definition.psd  connection_density_illustration.psd  lif_neuron_illustrate.psd  tuning_the_network.psd  tuning_the_network_3.psd
kex_project/: Part 1 : Building the original network model.ipynb  Part 2 : Building the modular network.ipynb  Part 2c : Building the modular network.ipynb  Part 3: HMN Synapse Effect.ipynb  hmn_network.py
kex_project/_archive/: Part 1 : Building the original network model.ipynb  Part 2 : Building the modular network copy.ipynb  Part 2a : Building the modular network.ipynb  Part 3 : HMNs with Depressive synapses.ipynb  criticality_metrics backup.py  hmn_network.py  hmn_network_BACKUP.py  random_network.py  random_network2.py
kex_project/classes/: Part 3: HMN Synapse Effect_no_pwrlaw.ipynb  criticality_metrics.py  criticality_metrics_powerlaw.py  hmn_adaptive.py  hmn_depressive.py  hmn_depressive_adaptive.py  hmn_multi_delay.py  hmn_network.py  random_network.py
(+2 files in other folders)
