[tool.poetry]
name = "kex-project"
version = "0.1.0"
description = ""
authors = ["Hannes Gustafsson <gssonhannes@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.22.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
