[tool.poetry]
name = "kex-project"
version = "0.1.0"
description = ""
authors = ["Hannes Gustafsson <gssonhannes@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.22.0"
sorn = {extras = ["all"], version = "^0.7.4"}
tqdm = "^4.65.0"
SciencePlots = "^2.0.1"
seaborn = "^0.12.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
